--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ input:focus {
   {
     color: white;
     border: 2px solid white;
+    padding: 20px;
+    
 
   }
 
@@ -95,3 +97,15 @@ input:focus {
     grid-row-end: 5;
     width: 25vw;
   }
+
+  .box2,.box3,.box4,.box5
+  {
+    grid-column-start: 2;
+    grid-column-end: 4;
+  }
+
+  /* .box3
+  {
+    grid-column-start: 2;
+    grid-column-end: 4;
+  } */
