--- a/style.css
+++ b/style.css
@@ -77,7 +77,8 @@ input:focus {
     width:100vw;
     height: 100vh;
     grid-template-rows: repeat(4,1fr);
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(4,1fr);
+    column-gap: 5px;
    
 
   }
@@ -85,8 +86,10 @@ input:focus {
   .item
   {
     color: white;
-    border: 2px solid white;
-    padding: 20px;
+    /* border: 2px solid white; */
+    padding: 10px;
+    background: #202020;
+    border-radius: 5px;
     
 
   }
@@ -98,10 +101,12 @@ input:focus {
     width: 25vw;
   }
 
-  .box2,.box3,.box4,.box5
+  .box2
   {
     grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 5;
   }
 
   /* .box3
@@ -109,3 +114,54 @@ input:focus {
     grid-column-start: 2;
     grid-column-end: 4;
   } */
+
+.nnh
+{
+    font-family: "Poppins", serif;
+    padding-left:1vw ;
+    /* padding-top: 2vh; */
+    font-size: medium;
+}
+
+.e-9640-icon {
+    fill: white; /* Change to any color you want */
+    width:25px
+  }
+  
+.nn{
+    display: flex;
+    padding-left: 10px;
+}
+
+.hh{
+  background-color: #302e2e;
+  padding-top: 10px;
+  padding-left:10px;
+  margin-top: 20px;
+  padding-bottom: 10px;
+  border-radius: 5px;
+}
+.hh h4{
+  font-family: "Poppins", serif;
+
+}
+.hh p{
+
+  font-family: "Poppins", serif;
+  font-size: small;
+}
+
+.hh button
+{
+  background-color: white;
+  color: black;
+  font-family: "Poppins", serif;
+  border: none;
+  margin-top: 10px;
+  margin-left:1px;
+  width:120px;
+  height: 30px;
+  border-radius: 10px;
+  text-transform: capitalize;
+  font-weight: 600;
+}
